Closed
Bug 1254471
Opened 9 years ago
Closed 9 years ago
MessageChannel.cpp:982:13: error: unused variable 'transaction' [-Werror=unused-variable]
Categories
(Firefox OS Graveyard :: GonkIntegration, defect)
Tracking
(firefox48 fixed)
RESOLVED
FIXED
2.6 S9 - 3/11
| Tracking | Status | |
|---|---|---|
| firefox48 | --- | fixed |
People
(Reporter: gwagner, Assigned: gwagner)
References
Details
Attachments
(1 file, 1 obsolete file)
|
1.17 KB,
patch
|
billm
:
review+
|
Details | Diff | Splinter Review |
No description provided.
| Assignee | ||
Comment 1•9 years ago
|
||
| Assignee | ||
Comment 2•9 years ago
|
||
Attachment #8727768 -
Attachment is obsolete: true
| Assignee | ||
Updated•9 years ago
|
Attachment #8727769 -
Flags: review?(wmccloskey)
Attachment #8727769 -
Flags: review?(wmccloskey) → review+
| Assignee | ||
Updated•9 years ago
|
Assignee: nobody → anygregor
Comment 4•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
status-firefox48:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 2.6 S9 - 3/11
You need to log in
before you can comment on or make changes to this bug.
Description
•