Bug 1254471 - Fix MessageChannel.cpp error unused variable transaction. r=billm